[package]
name = "prusa_link_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["serde_derive", "derive"] }
tokio = { version = "1.35.1", features = ["full"] }
