[package]
name = "prusa_link_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["serde_derive", "derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-test = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
mockito = "1.2.0"
